--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -745,7 +745,7 @@ a {
   transition: color 0.6s;
 }
 .cid-saNWaZyi4k {
-  background-image: url("../../../assets/images/FondoFrescos.jpg");
+  background-image: url("../../../assets/images/FondoFrescos.png");
   background-position: 0px 70px;
 }
 
